--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 </style>
 <body>
     <h1>This is a sample</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae obcaecati odio officia aliquid ipsum tempore, praesentium ut atque excepturi molestiae soluta nam laborum veritatis delectus adipisci, corporis quae facere incidunt!</p>
 </body>
 </html>
