--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae obcaecati odio officia aliquid ipsum tempore, praesentium ut atque excepturi molestiae soluta nam laborum veritatis delectus adipisci, corporis quae facere incidunt!</p>
     <h2>lorrem fmdmf</h2>
     <p>this is </p>
+    <p>and then</p>
 </body>
 </html>
